# Word-like-notepad

./: LICENSE  README.md  Word-like-notepad.py  pyproject.toml  setup.cfg  setup.py
